# rs2026

./: .gitignore  ANALYYSI.md  Cargo.toml  PROMPTIT.md  README.md
.github/workflows/: cargoclippy.yml  cargotest.yml  rustfmt.yml
migrations/2026-01-16-191306_create_users/: up.sql
migrations/2026-01-16-191307_create_rooms/: up.sql
migrations/2026-01-16-191308_create_reservations/: down.sql  up.sql
src/: lib.rs  main.rs
src/common/: error.rs  time.rs
src/db/: mod.rs  schema.rs
src/reservation/: handlers.rs  mod.rs  repository.rs  types.rs  validation.rs
src/room/: handlers.rs  mod.rs  repository.rs  types.rs
src/user/: handlers.rs  mod.rs  repository.rs  types.rs
