[package]
name = "rs2026"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", features = [
  "sqlite",
  "r2d2",
  "chrono",
  "returning_clauses_for_sqlite_3_35",
] }
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
diesel_migrations = "2.3.1"
